[gd_scene load_steps=37 format=3 uid="uid://hhblqqtfshlr"]

[ext_resource type="Texture2D" uid="uid://ywmskfigycuk" path="res://Assets/Sprites/Skeleton enemy.png" id="1_8a6c7"]
[ext_resource type="Script" uid="uid://bjeu2daw8ap7g" path="res://Assets/Scripts/enemy_1.gd" id="1_fa6de"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fa6de"]
radius = 17.0
height = 34.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fa6de"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey4mj"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc8sv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp68t"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb2cf"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8n50"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tkw8"]
atlas = ExtResource("1_8a6c7")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_878wh"]
atlas = ExtResource("1_8a6c7")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hta3q"]
atlas = ExtResource("1_8a6c7")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efuk4"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmp7x"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v6jv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqqyh"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgass"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4qsk"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0o3a"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kobke"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkrh3"]
atlas = ExtResource("1_8a6c7")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7tfn"]
atlas = ExtResource("1_8a6c7")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt8np"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo7fv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu8pm"]
atlas = ExtResource("1_8a6c7")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw204"]
atlas = ExtResource("1_8a6c7")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw3hv"]
atlas = ExtResource("1_8a6c7")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wd1q"]
atlas = ExtResource("1_8a6c7")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nygha"]
atlas = ExtResource("1_8a6c7")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yp3s"]
atlas = ExtResource("1_8a6c7")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ehl"]
atlas = ExtResource("1_8a6c7")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02f1b"]
atlas = ExtResource("1_8a6c7")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekdi8"]
atlas = ExtResource("1_8a6c7")
region = Rect2(384, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4qsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa6de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey4mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc8sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp68t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb2cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8n50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tkw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_878wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hta3q")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efuk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmp7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v6jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqqyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgass")
}],
"loop": false,
"name": &"damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4qsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0o3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kobke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkrh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7tfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt8np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo7fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu8pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw204")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw3hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wd1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nygha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yp3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ehl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02f1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekdi8")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vb2cf"]
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0o3a"]
radius = 62.0
height = 124.0

[node name="Enemy1" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "nav") groups=["enemy"]]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_fa6de")
sprite = NodePath("AnimatedSprite2D")
nav = NodePath("Nav")
speed = 80.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_fa6de")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j4qsk")
animation = &"move"
frame_progress = 0.8624163

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
shape = SubResource("CapsuleShape2D_fa6de")

[node name="hitBox" type="Area2D" parent="AnimatedSprite2D"]

[node name="strikeShape" type="CollisionShape2D" parent="AnimatedSprite2D/hitBox"]
position = Vector2(13, -4)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_vb2cf")

[node name="Nav" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true

[node name="Range" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Range"]
position = Vector2(-1, -1)
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_n0o3a")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite2D/hitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
